# sir-threadevere

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  config-default.yml  docker-compose.yml  pyproject.toml  tox.ini
.github/: review-policy.yml
.github/workflows/: build.yaml
bot/: __init__.py  __main__.py  bot.py  constants.py
bot/exts/: nominations.py
bot/exts/ban_appeals/: __init__.py  _api_handlers.py  _cog.py  _models.py  responses.json
bot/exts/recruitment/: nominations.py
bot/exts/utils/: error_handler.py  extensions.py  source.py
bot/utils/: helpers.py
thread_bot/: __init__.py  __main__.py  constants.py  thread_bot.py
thread_bot/utils/: extensions.py
